--- a/BlazorApp1/Pages/SkillTreeV2.razor
+++ b/BlazorApp1/Pages/SkillTreeV2.razor
@@ -62,6 +62,7 @@
         {
             FileName = sentFile;
             LoadTree();
+            sentFile = null;
         }
     }
 
@@ -201,10 +202,15 @@
                 }
             }
         }
+
         UserLocation();
         StateHasChanged();
 
-        string questionType = await JS.InvokeAsync<string>("clickButton", "dumb");
+        if (sentFile == null)
+        {
+            string questionType = await JS.InvokeAsync<string>("clickButton", "dumb");
+        }
+
     }
 
     // To notify the position changing event before dragging the diagram elements.
