--- a/BlazorApp1/Pages/SkillTreeV2.razor
+++ b/BlazorApp1/Pages/SkillTreeV2.razor
@@ -28,8 +28,8 @@
 <SfDiagramComponent @ref="diagram" Nodes="@nodes"
                     Height="800px"
                     Connectors="@connectors"
-                    Click="@OnClick"
-                    PositionChanging="@OnPositionChanging" />
+                    PositionChanging="@OnPositionChanging" 
+                    Click="@OnClick" />
 
 @code {
     //Reference to diagram.
