--- a/BlazorApp1/Pages/MakeSkillTreeV2.razor
+++ b/BlazorApp1/Pages/MakeSkillTreeV2.razor
@@ -8,7 +8,7 @@
 <Popup @ref="popupRef" />
 
 <div class="btn-group">
-    <button @onclick="AddNode">Add Node</button>
+    <button @onclick="AddNode">Add Branch</button>
     <button @onclick="AddConnector">Add Connector</button>
     <button @onclick="Clear">Clear</button>
     <button @onclick="Undo">Undo</button>
