Cosmetic input code bar
Will add function soon, just for you guys to see and know about

--- a/BlazorApp1/Pages/Persona.razor
+++ b/BlazorApp1/Pages/Persona.razor
@@ -4,7 +4,9 @@
 
 @inject NavigationManager UriHelper
 
-<h3>Welcome @User.UserName (@User.user.Type): general level #@User.user.Level</h3>
+<h3 style="display:inline-block;">Welcome @User.UserName (@User.user.Type): general level #@User.user.Level</h3>
+<input type="text" size="15" placeholder="Input Codes" style="float:right;display:inline-block;text-align:right;">
+
 
 <br/>
 
