--- a/BlazorApp1/Shared/MainLayout.razor
+++ b/BlazorApp1/Shared/MainLayout.razor
@@ -24,8 +24,8 @@
 @code{
     public void Logout()
     {
-        Assignment.AssignmentList.Clear();
-        User.user.saveData();
+    //    Assignment.AssignmentList.Clear();
+    //    User.user.saveData();
         UriHelper.NavigateTo($"");
     }
 }
